[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meow-piggy-bank"
version = "1.0.0"
description = "喵喵存金罐 - 可爱的个人记账桌面应用"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["bookkeeping", "finance", "desktop", "pywebview"]
authors = [
    {name = "xrj", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "pywebview>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/meow-piggy-bank"
Repository = "https://github.com/your-username/meow-piggy-bank.git"
Issues = "https://github.com/your-username/meow-piggy-bank/issues"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "-q"]
testpaths = ["tests"]
python_files = ["test_*.py"]
